<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="@dimen/margin_middle"
            android:contentDescription="@string/user_profile_userImage_des"
            android:src="@drawable/profile_dummy" />

        <TextView
            android:id="@+id/txtProfileName"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_txtProfileName_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtUserName"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/user_profile_txtUsername_text"
            android:textAlignment="center" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="@dimen/margin_middle"
            android:layout_marginRight="@dimen/margin_middle"
            android:onClick="onClick_btnEditProfile"
            android:text="@string/user_profile_btnEditProfile_text"
            />

        <View
            android:id="@+id/going_event_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size_medium"
            android:layout_margin="@dimen/margin_small"
            android:background="@android:color/darker_gray"


            />

        <Button
            android:id="@+id/btnGoingEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_middle"
            android:layout_marginRight="@dimen/margin_middle"
            android:layout_marginBottom="@dimen/margin_small"
            android:onClick="onClick_btnGoingEvents"
            android:text="@string/user_profile_btnGoingEvents_text" />

        <Button
            android:id="@+id/btnCreatedEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_middle"
            android:layout_marginRight="@dimen/margin_middle"
            android:layout_marginBottom="@dimen/margin_middle"
            android:onClick="onClick_btnCreatedEvents"
            android:text="@string/user_profile_btnCreatedEvents_text" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>