<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.RegisterWithEmailActivity">

    <EditText
        android:id="@+id/registerUsernameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:hint="@string/register_txtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/registerEmailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:hint="@string/register_txtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameTextField"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/registerFirstNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:hint="@string/register_txtFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailTextField"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/registerLastNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:hint="@string/register_txtLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerFirstNameTextField"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/registerPasswordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:hint="@string/register_txtPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLastNameTextField"
        android:maxLines="1"/>
    />

    <EditText
        android:id="@+id/registerPasswordRepeatTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:hint="@string/register_txtPasswordRepeat"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextField"
        android:maxLines="1"/>

    <Button
        android:id="@+id/registerSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_middle"
        android:layout_marginBottom="@dimen/margin_large"
        android:ems="10"
        android:text="@string/register_btnSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>