<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_edit_popup_password_txtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/edit_user_profile_old_password"
        android:hint="@string/edit_user_profile_old_password"

        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_middle"

        android:inputType="textPassword"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/user_edit_popup_password_txtEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/edit_user_profile_enter_password"
        android:hint="@string/edit_user_profile_enter_password"


        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_middle"
        android:inputType="textPassword"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/user_edit_popup_password_txtRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/edit_user_profile__repeat_password"


        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_middle"

        android:hint="@string/edit_user_profile__repeat_password"
        android:inputType="textPassword"
        android:maxLines="1"
        />


</LinearLayout>