<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/emailLoginTextField"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:hint="@string/login_txtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordLoginTextField"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginTextField" />

    <Button
        android:id="@+id/emailSignInButton"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:text="@string/login_btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginTextField" />

    <View
        android:id="@+id/divider"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignInButton" />

    <Button
        android:id="@+id/emailRegisterButton"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_middle"
        android:ems="10"
        android:text="@string/login_btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</android.support.constraint.ConstraintLayout>